# Smart-Traffic

Backend/: .env  .gitignore  Makefile  consumer.py  pyproject.toml
Backend/deployment/: docker-compose.yml
Backend/deployment/ai-streaming/: Dockerfile  requirements.txt
Backend/deployment/ai_services/: Dockerfile  requirements.txt
Backend/deployment/api/: Dockerfile  requirements.txt
Backend/deployment/hls-stream/: Dockerfile  requirements.txt
Backend/protoc/: gen_pb2.sh  lpr.proto
Backend/src/ai-streaming/: main.py  sub.py
Backend/src/ai-streaming/config/: __init__.py  camera.json
Backend/src/ai-streaming/utils/: camera.py  common.py  logger.py
Backend/src/ai_services/: camera.py  main.py
Backend/src/ai_services/config/: __init__.py
Backend/src/ai_services/modules/: kafka.py  lpr_tracker.py
Backend/src/ai_services/modules/protoc/: lpr_pb2.py  lpr_pb2_grpc.py
Backend/src/ai_services/modules/services/: __init__.py  crowd_detection.py  license_plate.py  speed_estimate.py  traffic_light.py  vehicle_counting.py  wrong_lane.py
Backend/src/ai_services/utils/: common.py  draw.py  functions.py  logger.py
Backend/src/ai_services/utils/grpc/: gprc_client.py
Backend/src/ai_services/utils/lpr/: api.py
Backend/src/ai_services/utils/minio/: upload_minio.py
Backend/src/api/: app.py
Backend/src/api/config/: __init__.py  cam.json
Backend/src/api/router/: camera.py  counting_analysis.py  event.py
Backend/src/api/utils/: functions.py  logger.py
Frontend/: Makefile  package-lock.json  package.json
Frontend/deployment/: Dockerfile  docker-compose.yml
Frontend/src/: App.jsx
Frontend/src/components/: SearchOptionBar.jsx  SelectCustom.jsx  sidebar.jsx
Frontend/src/components/AnnotationDrawer/: PolygonAnnotation.jsx
Frontend/src/components/Dashboard/VehicleSearch/: FrameList.jsx  UploadAndDisplayImage.jsx
Frontend/src/components/scss/: sidebar.scss
Frontend/src/connectDB/: axios.jsx
Frontend/src/containers/: CameraManager.jsx  ConfigurePage.jsx  LiveView.jsx
Frontend/src/containers/Camera/: AddCameraForm.jsx  CameraDrawer.jsx  CameraList.jsx
Frontend/src/containers/Dashboard/: Analysis.jsx  AreaChartCustom.jsx  DashboardManager.jsx  EventList.jsx  InfoTooltip.jsx  Overview.jsx  PopupManager.jsx  ScatterChart.jsx  VehicleSearch.jsx
Frontend/src/containers/Dashboard/Overview/: AlertTable.jsx  ReviewEvent.jsx  StatHeadManager.jsx
