[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "aiokafka[lz4]>=0.12.0",
    "black>=25.1.0",
    "confluent-kafka>=2.10.1",
    "fastapi>=0.115.13",
    "ffmpeg-python==0.2.0",
    "minio>=7.2.15",
    "msgpack>=1.1.1",
    "numpy<2.0.0",
    "opencv-python==4.10.0.84",
    "orjson>=3.10.18",
    "packaging>=25.0",
    "pillow<10.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "py3nvml>=0.2.7",
    "pymongo>=4.13.2",
    "pyparsing>=3.2.3",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruamel-yaml>=0.18.14",
    "schedule==1.2.2",
    "scikit-learn>=1.7.0",
    "supervision==0.22.0",
    "tensorrt>=10.12.0.36",
    "tqdm>=4.67.1",
    "tzlocal>=5.3.1",
    "ultralytics==8.3.157",
    "unidecode>=1.4.0",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
]

[dependency-groups]
ai-services = [
    "aiohttp>=3.12.13",
    "black>=25.1.0",
    "confluent-kafka>=2.10.1",
    "minio>=7.2.15",
    "msgpack>=1.1.1",
    "numpy<2.0.0",
    "packaging>=25.0",
    "pillow<10.0.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.2",
    "pyparsing>=3.2.3",
    "python-dotenv==1.0.1",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "supervision==0.22.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.157",
    "websockets>=15.0.1",
]
ai-streaming = [
    "black>=25.1.0",
    "confluent-kafka>=2.10.1",
    "msgpack>=1.1.1",
    "pymongo>=4.13.2",
    "python-dotenv==1.0.1",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "supervision==0.22.0",
    "tensorrt>=10.12.0.36",
    "ultralytics==8.3.157",
]
api = [
    "black>=25.1.0",
    "confluent-kafka>=2.10.1",
    "fastapi>=0.115.13",
    "minio>=7.2.15",
    "msgpack>=1.1.1",
    "orjson>=3.10.18",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "py3nvml>=0.2.7",
    "pymongo>=4.13.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruamel-yaml>=0.18.14",
    "schedule>=1.2.2",
    "tzlocal>=5.3.1",
    "unidecode>=1.4.0",
    "uvicorn[standard]>=0.34.3",
]
hls-stream = [
    "aiokafka[lz4]>=0.12.0",
    "black>=25.1.0",
    "confluent-kafka>=2.10.1",
    "fastapi>=0.115.13",
    "ffmpeg-python==0.2.0",
    "msgpack>=1.1.1",
    "opencv-python==4.10.0.84",
    "rich>=14.0.0",
    "schedule==1.2.2",
    "uvicorn>=0.34.3",
]
